website/content/fr/docs/v0.7/userguide/_index.md
---
title: "Guide Utilisateur"
description: "Guide utilisateur d'ALS"
author: "ALS Team"

lastmod: 2025-11-07T14:54:31Z
keywords: [ "guide utilisateur d'ALS" ]
draft: false
type: "docs"
tags: [ "glossaire" , "typographie" ]
weight: 70300
---

**Laissez-vous guider !** Nous allons vous montrer tout ce qu'il y a à savoir sur ALS pour une utilisation fluide et
optimale, adaptée à **vos** besoins.

# Conventions

Définissons tout d'abord les termes et mises en forme que nous utiliserons tout au long de ce guide.

## Glossaire {#glossary}

### brute {#sub}

Image capturée par votre système d'acquisition

### calibration {#calibration}

Ensemble de traitements appliqués aux [brutes](#sub) dans le but d'éliminer les défauts du capteur. Cela inclut
généralement la suppression des pixels chauds et la soustraction d'un [master dark](#master-dark) pour réduire le bruit
thermique.

### master dark {#master-dark}

Image contenant le bruit thermique du capteur. Elle est soustraite des [brutes](#sub) pendant la [calibration](#calibration) 


## Typographie

### Texte
- un `élémént d'interface graphique`
- un {{< als-ks >}}raccourci clavier{{< /als-ks >}}
- une **information importante**
- ⚙️ Détail technique

### Paragraphes
- ⚠️ Avertissement
- ℹ️ Information
- 💡 Astuce
- 🧠 Rappel
- 🐛 Bug connu

### Actions utilisateur
- 🖱️ une action à la souris est requise
- ⌨️ une action au clavier est requise
- 🎛️ une action en dehors d'ALS est requise

